tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading done.
Simulation version v1_15_0+1552-77b40087aab started with time: 0.00.
Simulation ended at time: 1909.00
Reason: Too many teleports.
Performance: 
 Duration: 0.29s
 Real time factor: 6537.67
 UPS: 555236.301370
Vehicles: 
 Inserted: 181
 Running: 177
 Waiting: 0
 Teleports: 6 (Yield: 1, Wrong Lane: 5)

